Update paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
   <h1>Locus Suit</h1>
-  <p>Restoring independence in every step</p>
+  <p>Smart Sensory Wearables For Navigation<br>Restoring independence in every step</p>
   <div class="coming-soon">Coming Soon</div>
 </body>
 </html>
