Update descriptions for Haptic Vest and Camera Module

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                         <h3 class="card-title">Haptic Vest</h3>
                         <div class="card-meta">360° Awareness</div>
                         <p class="card-description">
-                            8 ultrasonic transducers and LRA motors create a complete touch horizon. Objects approaching blind spots translate to graduated pressure on the torso.
+                            8 sensors arranged around your body in all eight intermediate directions. Turns spatial depth into gentle vibrations on your torso.
                         </p>
                     </div>
                 </div>
@@ -608,7 +608,7 @@
                         <h3 class="card-title">Camera Module</h3>
                         <div class="card-meta">Visual Context</div>
                         <p class="card-description">
-                            8 ultrasonic transducers and LRA motors create a complete touch horizon. Objects approaching blind spots translate to graduated pressure on the torso.
+                            The Vision Module focuses on details the vest cannot provide. Designed to slide easily onto the stems of most standard pairs of glasses.
                         </p>
                     </div>
                 </div>
@@ -622,7 +622,7 @@
                         <h3 class="card-title">Vest + Camera = Locus Suit</h3>
                         <div class="card-meta">Restoring Independence</div>
                         <p class="card-description">
-                           Together these two components combine to form the Locus Suit, a smart wearable system for the visually impaired and blind, and those working in low-visibility settings.
+                           These two components combine to form the Locus Suit, a smart wearable for the impaired or blind, or those working in low-visibility settings.
                         </p>
                     </div>
                 </div>
@@ -634,7 +634,7 @@
     <!-- Diagnostics -->
     <section id="diagnostics" class="section" style="background: var(--bg-secondary);">
         <div class="container">
-            <div class="section-label">Interactive Diagnostics</div>
+            <div class="section-label">Interactive Field</div>
             
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 2rem;">
                 <!-- Haptic Panel -->
