Add text-decoration style to navigation link

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
     <nav>
         <div class="container">
             <div style="display: flex; align-items: center; justify-content: space-between; height: 64px;">
-                <a href="#" style="font-weight: 600; letter-spacing: -0.02em; font-size: 1.1rem;">
+                <a href="#" style="font-weight: 600; letter-spacing: -0.02em; font-size: 1.1rem; text-decoration: none;">
                     LOCUS
                 </a>
                 <div style="display: flex; gap: 2.5rem;" class="hidden md:flex">
