Update demo video link in index.html

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 <a href="https://www.linkedin.com/company/locussuit" class="btn">
                     LinkedIn
                 </a>
-                <a href="https://www.youtube.com/embed/qncACJptDwY?autoplay=1" class="btn">
+                <a href="https://youtu.be/IDM4owhf4fY" class="btn">
                     Watch Demo
                 </a>
                 <a href="#system" class="btn">
