Modify audio element and remove user image
Updated audio element to support video format and removed unnecessary image.

--- a/index.html
+++ b/index.html
@@ -733,12 +733,9 @@
                 
                 <div class="panel">
                     <div class="panel-body" style="min-height: auto; padding: 3rem;">
-                        <div style="text-align: center; margin-bottom: 2rem;">
-                            <img src="user.png" alt="User Manual" style="max-width: 400px; width: 100%; border-radius: 8px; border: 1px solid var(--border);">
-                        </div>
-                        
-                        <audio controls style="width: 100%; margin-top: 1.5rem;">
-                            <source src="manual.mp4" type="audio/mpeg">
+                        <audio controls style="width: 100%;">
+                            <source src="manual.mp4" type="audio/mp4">
+                            <source src="manual.mp4" type="video/mp4">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
