Update subtitle text for Locus Suit

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
             </h1>
             
             <p class="hero-subtitle animate-fade-up delay-2" style="margin-top: 2rem; opacity: 0;">
-                Smart Sensory Wearables for Navigation
+                Restoring Independence in Every Step.
             </p>
             
             <div style="margin-top: 3rem; display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap;" class="animate-fade-up delay-3">
